// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST GifExpertApp should show component correctly 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`TEST GifExpertApp should show list of categories 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Goku"
      key="Goku"
    />
    <GifGrid
      category="Vegetta"
      key="Vegetta"
    />
  </ol>
</div>
`;
